--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>JJ and YisYis's date together in London</title>
+  <title>Our date together in London</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     .thank-you {
@@ -25,95 +25,37 @@
 </head>
 <body>
   <div class="container">
-    <h1>₍ᐢ..ᐢ₎ JJ and YisYis's London Adventure</h1>
-    <img src="pochacco1.png" alt="Pochacco Image" class="main-img" />
-    <p>Plan our day in London! Choose one activity for each part of the day:</p>
+    <h1>₍ᐢ..ᐢ₎ Our London Adventure</h1>
 
-    <form class="dropdowns" action="https://formsubmit.co/jeneshg@gmail.com" method="POST" onsubmit="return showPopup()">
-      <label>☀️ Morning:
-        <select name="morning">
-          <option>Visit Tower Bridge</option>
-          <option>Stroll in Hyde Park</option>
-          <option>Harry Potter Studio</option>
-        </select>
-      </label>
+    <p>Here’s our perfect London date plan:</p>
 
-      <label>🍴 Lunch:
-        <select name="lunch">
-          <option>Lunch in Central London</option>
-          <option>Italian restaurant</option>
-          <option>Dim sum in Chinatown</option>
-        </select>
-      </label>
+    <form id="dateForm" action="https://formsubmit.co/jeneshg@gmail.com" method="POST" onsubmit="return showPopup()">
 
-      <label>🎨 Afternoon:
-        <select name="afternoon">
-          <option>Tour the British Museum</option>
-          <option>Visit Lonodn Eye/Bridge</option>
-          <option>Harry Potter Tour</option>
-        </select>
-      </label>
+      <input type="hidden" name="morning" value="Visit Tower Bridge">
+      <input type="hidden" name="lunch" value="Italian Restaurant">
+      <input type="hidden" name="afternoon" value="Tour the British Museum">
+      <input type="hidden" name="evening" value="Sunset from The Shard">
+      <input type="hidden" name="night" value="Cosy movie night in Hotel">
 
-      <label>🌆 Evening:
-        <select name="evening walk?">
-          <option>Camden Town</option>
-          <option>Sunset from The Shard</option>
-          <option>River Thames cruise</option>
-        </select>
-      </label>
+      <div>
+        ☀️ Morning: Visit Tower Bridge<br><br>
+        🍴 Lunch: China town<br><br>
+        🎨 Afternoon: Museum/Aracdes<br><br>
+        🌆 Evening: Sunset <br><br>
+        🌙 Night: Night stroll through the city
+      </div>
 
-      <label>🌙 Night:
-        <select name="night">
-          <option>Stargazing at Hampstead Heath</option>
-          <option>Late dessert at Soho</option>
-          <option>Cosy movie night in Hotel</option>
-        </select>
-      </label>
-
+      <br>
       <button type="submit" class="submit-btn">Press to start our date</button>
     </form>
 
-    <a href="more.html">
-      <img src="pochacco2.png" alt="Pochacco Image 2" class="bottom-img interactive-button" />
-    </a>
   </div>
-   <script>
-    document.getElementById('dateForm').addEventListener('submit', function(e) {
-      e.preventDefault();
 
-      const formData = new FormData(this);
-      formData.append('_captcha', 'false');
-      formData.append('_template', 'table');
-
-      fetch('https://formsubmit.co/jeneshg@gmail.com', {
-        method: 'POST',
-        body: formData
-      })
-      .then(response => {
-        if (response.ok) {
-          document.getElementById('dateForm').style.display = 'none';
-          document.getElementById('thankYouMessage').style.display = 'block';
-        } else {
-          alert('Oops! Something went wrong.');
-        }
-      })
-      .catch(error => {
-        alert('Network error. Please try again later.');
-      });
-    });
-  </script>
-<script>
+  <script>
     function showPopup() {
       alert("Yay! Your date plan has been sent 💖\nI can't wait to do this with you! (っ˘з(˘⌣˘ )");
-      return true; // Allow form to submit to FormSubmit
+      return true;
     }
   </script>
-<img src="holdinghands.png" alt="Holding Hands" style="
-  position: fixed;
-  bottom: 100px;
-  right: 100px;
-  width: 200px; /* Adjust size as needed */
-  z-index: 999;
-">
 </body>
 </html>
