Add animated heart emojis to index.html
Added animated heart emojis to the HTML body.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
   </style>
 </head>
 <body>
+<div class="heart" style="left:10%; animation-duration: 8s;">💖</div>
+<div class="heart" style="left:25%; animation-duration: 10s;">💕</div>
+<div class="heart" style="left:45%; animation-duration: 7s;">💗</div>
+<div class="heart" style="left:65%; animation-duration: 9s;">💞</div>
+<div class="heart" style="left:85%; animation-duration: 11s;">💓</div>
+
   <div class="container">
     <h1>₍ᐢ..ᐢ₎ Our London Adventure</h1>
 
