--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="container">
     <h1>₍ᐢ..ᐢ₎ Our London Adventure</h1>
 
-    <p>Here’s our perfect London date plan:</p>
+    <p>Hi Yao, I hope you enjoy this little website I put together for us to enjoy London:</p>
 
       <input type="hidden" name="morning" value="Visit Tower Bridge">
       <input type="hidden" name="lunch" value="Italian Restaurant">
