--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   </style>
 </head>
 <body>
-<div class="heart" style="left:10%; animation-duration: 8s;">💖</div>
-<div class="heart" style="left:25%; animation-duration: 10s;">💕</div>
-<div class="heart" style="left:45%; animation-duration: 7s;">💗</div>
-<div class="heart" style="left:65%; animation-duration: 9s;">💞</div>
-<div class="heart" style="left:85%; animation-duration: 11s;">💓</div>
+<div class="puppy" style="left:10%; animation-duration: 8s;">💖</div>
+<div class="puppy" style="left:25%; animation-duration: 10s;">💕</div>
+<div class="puppy" style="left:45%; animation-duration: 7s;">💗</div>
+<div class="puppy" style="left:65%; animation-duration: 9s;">💞</div>
+<div class="puppy" style="left:85%; animation-duration: 11s;">💓</div>
 
   <div class="container">
-    <h1>₍ᐢ..ᐢ₎ Our London Adventure</h1>
+    <h1>୨ৎOur London Adventure୨ৎ</h1>
 
     <p>Hi Yao, I hope you enjoy this little website I put together for us to enjoy London:</p>
 
