--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </style>
 </head>
 <body>
+<!-- Floating Puppies -->
 <div class="puppy" style="left:10%; animation-duration: 9s;">🐶</div>
 <div class="puppy" style="left:25%; animation-duration: 12s;">🐾</div>
 <div class="puppy" style="left:45%; animation-duration: 8s;">🐶</div>
