--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
       </div>
 
       <br>
-      <button type="submit" class="submit-btn">Press to start our date</button>
-    </form>
+      <button class="submit-btn" onclick="startDate()">
+
+    
 
   </div>
 
-  <script>
-    function showPopup() {
-      alert("Yay! Your date plan has been sent 💖\nI can't wait to do this with you! (っ˘з(˘⌣˘ )");
-      return true;
+    <script>
+  function startDate() {
+    alert("Yay! Our London adventure starts now 🐶💕");
+  }
     }
   </script>
 </body>
