--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
 
       <br>
-      <button class="submit-btn" onclick="startDate()">
+      <button class="submit-btn" onclick="startDate()">Press to start our date</button>
 
     
 
