--- a/index.html
+++ b/index.html
@@ -31,31 +31,27 @@
 <div class="puppy" style="left:65%; animation-duration: 11s;">🦴</div>
 <div class="puppy" style="left:85%; animation-duration: 10s;">🐕</div>
 
-  <div class="container">
-    <h1>୨ৎOur London Adventure୨ৎ</h1>
+  <div class="days-wrapper">
 
-    <p>Hi Yao, I hope you enjoy this little website I put together for us to enjoy London:</p>
-
-      <input type="hidden" name="morning" value="Visit Tower Bridge">
-      <input type="hidden" name="lunch" value="Italian Restaurant">
-      <input type="hidden" name="afternoon" value="Tour the British Museum">
-      <input type="hidden" name="evening" value="Sunset from The Shard">
-      <input type="hidden" name="night" value="Cosy movie night in Hotel">
-
-      <div>
-        ☀️ Morning: Visit Tower Bridge<br><br>
-        🍴 Lunch: China town<br><br>
-        🎨 Afternoon: Museum/Aracdes<br><br>
-        🌆 Evening: Sunset <br><br>
-        🌙 Night: Night stroll through the city
-      </div>
-
-      <br>
-      <button class="submit-btn" onclick="startDate()">Press to start our date</button>
-
-    
-
+  <div class="day-card">
+    <h2>☀️ Day 1</h2>
+    Morning: Tower Bridge<br><br>
+    Lunch: Chinatown<br><br>
+    Afternoon: Museum / Arcades<br><br>
+    Evening: Sunset<br><br>
+    Night: City Stroll
   </div>
+
+  <div class="day-card">
+    <h2>🌙 Day 2</h2>
+    Morning: Hyde Park Walk<br><br>
+    Lunch: Café Date<br><br>
+    Afternoon: London Eye<br><br>
+    Evening: The Shard<br><br>
+    Night: Movie Night
+  </div>
+
+</div>
 
     <script>
   function startDate() {
