--- a/index.html
+++ b/index.html
@@ -1,63 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our date together in London</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    .thank-you {
-      display: none;
-      margin-top: 20px;
-      font-size: 18px;
-      color: #e75480;
-      background: #fff0f6;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      animation: fadeIn 1s ease forwards;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Our London Adventure</title>
+
+<style>
+
+/* Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Sky Background */
+body {
+  font-family: 'Comic Sans MS', cursive, sans-serif;
+  background: linear-gradient(135deg, #d6f0ff, #bde3ff, #a8d8ff);
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+  position: relative;
+}
+
+/* Floating Puppies */
+.puppy {
+  position: fixed;
+  bottom: -40px;
+  font-size: 28px;
+  animation: floatUp linear infinite;
+  opacity: 0.9;
+  pointer-events: none;
+  z-index: 1;
+}
+
+@keyframes floatUp {
+  0% { transform: translateY(0); opacity: 0; }
+  20% { opacity: 1; }
+  100% { transform: translateY(-120vh); opacity: 0; }
+}
+
+/* Main Card */
+.container {
+  background: white;
+  padding: 50px;
+  width: 90%;
+  max-width: 650px;
+  border-radius: 30px;
+  text-align: center;
+  box-shadow: 0 20px 50px rgba(77, 166, 255, 0.35);
+  border: 3px solid #cceeff;
+  animation: fadeIn 1s ease forwards;
+  z-index: 2;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(25px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+/* Title */
+h1 {
+  color: #4da6ff;
+  font-size: 30px;
+  margin-bottom: 15px;
+  animation: floaty 3s ease-in-out infinite;
+}
+
+@keyframes floaty {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-5px); }
+  100% { transform: translateY(0); }
+}
+
+/* Text */
+p {
+  margin-bottom: 20px;
+  font-size: 16px;
+  color: #444;
+}
+
+/* Day Cards */
+.day-card {
+  background: #f0f9ff;
+  padding: 25px;
+  border-radius: 20px;
+  margin-top: 20px;
+  box-shadow: 0 10px 25px rgba(77, 166, 255, 0.2);
+  transition: transform 0.3s ease;
+}
+
+.day-card:hover {
+  transform: translateY(-5px);
+}
+
+.day-card h2 {
+  color: #4da6ff;
+  margin-bottom: 15px;
+}
+
+/* Button */
+.submit-btn {
+  margin-top: 30px;
+  background: linear-gradient(45deg, #7ec8ff, #4da6ff);
+  border: none;
+  padding: 15px 35px;
+  font-size: 16px;
+  border-radius: 50px;
+  color: white;
+  cursor: pointer;
+  transition: 0.3s ease;
+  box-shadow: 0 10px 25px rgba(77, 166, 255, 0.4);
+}
+
+.submit-btn:hover {
+  transform: scale(1.1);
+  box-shadow: 0 15px 30px rgba(77, 166, 255, 0.6);
+}
+
+</style>
 </head>
+
 <body>
+
 <!-- Floating Puppies -->
 <div class="puppy" style="left:10%; animation-duration: 9s;">🐶</div>
-<div class="puppy" style="left:25%; animation-duration: 12s;">🐾</div>
-<div class="puppy" style="left:45%; animation-duration: 8s;">🐶</div>
-<div class="puppy" style="left:65%; animation-duration: 11s;">🦴</div>
-<div class="puppy" style="left:85%; animation-duration: 10s;">🐕</div>
+<div class="puppy" style="left:30%; animation-duration: 12s;">🐾</div>
+<div class="puppy" style="left:50%; animation-duration: 8s;">🐶</div>
+<div class="puppy" style="left:70%; animation-duration: 11s;">🦴</div>
+<div class="puppy" style="left:90%; animation-duration: 10s;">🐕</div>
 
-  <div class="days-wrapper">
+<div class="container">
+  <h1>୨ৎ Our London Adventure ༘⋆</h1>
+
+  <p>YaoYao, I made this little plan for our cutest London trip 💙</p>
 
   <div class="day-card">
     <h2>☀️ Day 1</h2>
     Morning: Tower Bridge<br><br>
     Lunch: Chinatown<br><br>
     Afternoon: Museum / Arcades<br><br>
-    Evening: Sunset<br><br>
-    Night: City Stroll
+    Evening: Sunset Walk<br><br>
+    Night: Cozy City Stroll
   </div>
 
   <div class="day-card">
     <h2>🌙 Day 2</h2>
-    Morning: Hyde Park Walk<br><br>
+    Morning: Hyde Park Picnic<br><br>
     Lunch: Café Date<br><br>
     Afternoon: London Eye<br><br>
-    Evening: The Shard<br><br>
+    Evening: The Shard View<br><br>
     Night: Movie Night
   </div>
 
+  <button class="submit-btn" onclick="startDate()">Start Our Adventure 🐶💙</button>
 </div>
 
-    <script>
-  function startDate() {
-    alert("Yay! Our London adventure starts now 🐶💕");
-  }
-    }
-  </script>
+<script>
+function startDate() {
+  alert("Two days. One adventure. With you 💙🐶");
+}
+</script>
+
 </body>
 </html>
