Update Day 2 morning activity in index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ p {
 
   <div class="day-card">
     <h2>🌙 Day 2</h2>
-    Morning: Hyde Park Picnic<br><br>
+    Morning: Cafes<br><br>
     Lunch: Café Date<br><br>
     Afternoon: London Eye<br><br>
     Evening: The Shard View<br><br>
